@@ -57,3 +57,6 @@ https://developpaper.com/springboot-project-traceid-generation-log-printing/
 4. Maven
 5. java debug调试工具使用
 6. lombok builder
+
+### 备注
+DK 8 中有关反射相关的功能自从 JDK 9 开始就已经被限制了，为了兼容原先的版本，需要在运行项目时添加 --add-opens java.base/java.lang=ALL-UNNAMED 选项来开启这种默认不被允许的行为
